<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/addLuck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/addLuckHint"
        android:lines="5" />

    <EditText
        android:id="@+id/addAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addAuthorHint"
        android:lines="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/languagePrompt" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/languagePrompt" />

        <include layout="@layout/button_bar" />
    </LinearLayout>

</LinearLayout>