<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <TextView
                android:id="@+id/text_luck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="25dp"
                android:textStyle="italic" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/select_Lan_button"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@drawable/language"
            android:text="@string/languageButton" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@drawable/add_luck"
            android:text="@string/addButton" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@drawable/edit_button"
            android:text="@string/editButton" />

        <Button
            android:id="@+id/upd_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.25"
            android:background="@drawable/update_button" />
    </LinearLayout>

</LinearLayout>